@@ -1,5 +1,6 @@
 UNRELEASED:
 
+- Added a cookie acceptance/declination banner.
 - Replaced Inkitt link on the Writing page with a Belletristica link.
 - Fixed broken link on the Legal page.
 
